# esg-summary-generator

./: README.md  pyproject.toml
example/: summ.py
prompt/: map_reduce_prompt.py
rag/: main.py
